--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,14 @@ nav{
 	display: flex;
 	justify-content: flex-end;
 }
+main{
+	margin-left: 30px;
+	margin-right: 30px;
+}
+section>p{
+	text-align: left;
+	padding: 10px;
+}
 header{
 	text-align: center;
 }
@@ -31,13 +39,22 @@ ul{
 }
 .social{
 	display:flex;
-	justify-content: space-around;
+	justify-content:  center;
+	margin-right: 20px;
+}
+footer>ul>li{
+	margin-left: 20x;
+	margin-right: 20px;
 }
 .product{
 	text-align: center;
-	border: 1px solid grey;
-	margin: 10px;
-	
+	border: 2px solid rgb(230, 228, 228);
+	margin: 10px;	
+}
+footer{
+	border-top: 2px solid rgb(230, 228, 228);
+	margin-left: 20px;
+	margin-right: 20px;
 }
 @media (min-width: 991px){
 .logo{	
@@ -64,8 +81,8 @@ header{
 main{
 	display: flex;
 	justify-content: space-evenly;
-	margin-left: 100px;
-	margin-right: 100px;
+	margin-left: 50px;
+	margin-right: 50px;
 }
 section>p{
 	text-align: left;
@@ -98,6 +115,12 @@ margin: 10px;
 .hamburger{
 	display:none;
 }
+.social{
+	display:flex;
+	justify-content:  space-around;
+}
+
+
 }	
 @media (min-width: 600px) and (max-width: 990px){
 .logo{
@@ -127,5 +150,9 @@ header{
 	 box-sizing: border-box;
 	 justify-content: space-between;
 	 margin:10px;
+}
+.social{
+	display: flex;
+	justify-content: space-around;
 }
 }
